--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
 <body>
 	<header>
-		FC BARCELONA
+	<h1>FC BARCELONA</h1>	
+    <nav>
+      <ul>
+        <li><a href="">HOME</a> </li>
+        <li><a href="https://www.fcbarcelona.com/en/">ABOUT</a> </li>
+        <li><a href="https://www.fcbarcelona.com/en/">CONTACT US</a> </li>
+      </ul>
+    </nav>
 	</header>
 	<main>
 		<img src="https://image.api.playstation.com/vulcan/img/rnd/202011/0200/rzdKIO41DWh8hX44ZNFVjTwy.jpg" alt="BARCELONA" style="width:600px">
