--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Founded in 1899 by a group of Swiss, Spanish, English, and Catalan footballers l
   <footer>
     &copy IBRAHME ALOMARI 2021 
   </footer>
+  <script src="app.js"></script>
 </body>
 
 </html>
