--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Football Team</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,11 +29,14 @@ Founded in 1899 by a group of Swiss, Spanish, English, and Catalan footballers l
        CLICK HERE FOR MORE INFORMATION 
      </a>
    </article>
+   <script src="app.js"></script>
   </main>
   <footer>
-    &copy IBRAHME ALOMARI 2021 
+    <h4>&copy IBRAHME ALOMARI 2021 </h4>
+    
+   <img src="https://i.pinimg.com/originals/fc/0b/14/fc0b14754d117d00150ca31ec33671d0.gif" alt="">
   </footer>
-  <script src="app.js"></script>
+  
 </body>
 
 </html>
